RESOLVED FIXED230166
AX: set insertion point to the end of a native text control does not work when passing a collapsed TextMarkerRange with both start and end equals to the end TextMarker for the element.
https://bugs.webkit.org/show_bug.cgi?id=230166
Summary AX: set insertion point to the end of a native text control does not work whe...
Andres Gonzalez
Reported 2021-09-10 12:37:15 PDT
AX: set insertion point to the end of a native text control does not work when passing a collapsed TextMarkerRange with both start and end equals to the end TextMarker for the element.
Attachments
Patch (22.36 KB, patch)
2021-09-10 13:11 PDT, Andres Gonzalez
no flags
Patch (23.83 KB, patch)
2021-09-11 06:50 PDT, Andres Gonzalez
no flags
Patch (25.96 KB, patch)
2021-09-12 11:46 PDT, Andres Gonzalez
no flags
Patch (26.06 KB, patch)
2021-09-13 11:21 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2021-09-10 13:11:57 PDT
Radar WebKit Bug Importer
Comment 2 2021-09-10 13:14:44 PDT
Andres Gonzalez
Comment 3 2021-09-11 06:50:23 PDT
Andres Gonzalez
Comment 4 2021-09-11 07:39:37 PDT
(In reply to Andres Gonzalez from comment #3) > Created attachment 437951 [details] > Patch Fix for mac-wk1 test.
Andres Gonzalez
Comment 5 2021-09-12 11:46:08 PDT
Andres Gonzalez
Comment 6 2021-09-13 11:21:10 PDT
EWS
Comment 7 2021-09-13 15:43:00 PDT
Committed r282369 (241632@main): <https://commits.webkit.org/241632@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438059 [details].
Note You need to log in before you can comment on or make changes to this bug.